# kuramoto-benchmark-suite

./: README.md  pyproject.toml  requirements.txt
data/examples/: small_demo.npz
kuramoto/: api.py  integrators.py  utils.py  validation.py
notebooks/: demo.ipynb
scripts/: generate_example_dataset.py
src/kuramoto/: graphs.py  integrators.py  utils.py  validation.py
tests/: test_generate_kuramoto_dataset.py
